# pdrs4all

./: .gitignore  pyproject.toml  readme.md
pdrs4all/: bandpasses.py  create_association.py  extract_templates.py  nirspec_wcs_calibrate_stitch.py  nsclean_run.py  parallel_tools.py  pipeline_arguments.py  pipeline_run.py  pipeline_settings.py  stitcher.py  synth.py
pdrs4all/legacy/: stitcher.py  synth_unused.py  wcs_offsets.py
pdrs4all/pipeline/: create_association.py  default_settings.py  nsclean_run.py  strun_joblist.py
pdrs4all/plot/: templates.py  templates_compare.py
pdrs4all/postprocess/: __init__.py  custom_io.py  extract_templates.py  miri_wcs_simple.py  mrs_simple_wcscorr.py  naive_cube_merge.py  nirspec_wcs_calibrate_stitch.py  spectral_segments.py  stitch_arcade_1overf_corr_10May.py  synth.py  wcscorr.py  write_cube.py
regions/: aper_T_DF_extraction.reg  mrs_proplyd_reference_position.reg
shell_scripts/: cube_build_ch1wcs_orion.sh  extract_templates_oneliner.sh  mirifu.bash  mirifu_compare_bg.bash  mirim.bash  nircam.bash  nirspec.bash  nirspec_custom_nsclean.bash  postprocess_mirifu.bash  postprocess_nirspec.bash  postprocess_spectroscopy.bash
target_options/: new_jump.json  orion_cube_pa.json  readme.md
