[tool.poetry]
name = "pdrs4all"
version = "0.1.0"
description = "PDRs4All data reduction and more"
authors = ["Dries Van De Putte <dvandepu@uwo.ca>"]
license = "LICENSE"
readme = "readme.md"

[tool.poetry.dependencies]
python = ">3.11,<3.13"
astropy = "^6.0.0"
crds = ">=11.17.16"
jwst = ">=1.17.1"
regions = ">=0.8"
specutils = ">=1.13.0"
pyqt6 = "^6.7.0"
tqdm = "^4.66.5"
photutils = "^2.0.1"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
create_association = 'pdrs4all.pipeline.create_association:main'
pipeline_jobs = 'pdrs4all.pipeline.strun_joblist:main'
nsclean_run = 'pdrs4all.pipeline.nsclean_run:main'
extract_templates = 'pdrs4all.postprocess.extract_templates:main'
